# AutoEE

./: .env.example  .gitignore  README.md  README_START_HERE.txt  README_nontech.md  pyproject.toml  requirements.txt
adapters/: __init__.py
agents/: circuit_simulation_agent.md  component_sourcing_agent.md  control_firmware_agent.md  knowledge_skill_agent.md  lab_debug_agent.md  loss_estimation_agent.md  magnetics_em_agent.md  manufacturing_agent.md  pcb_layout_agent.md  report_generation_agent.md  schematic_library_agent.md  spec_analysis_agent.md  thermal_mechanical_agent.md  validation_agent.md  workflow.md
autoee_demo/: __init__.py  project_store.py  skill_runner.py  web_app.py  web_launcher.py  web_state.py
docs/: agent_system_audit.md  next_steps.md  spec_format.md
evals/: README.md  __init__.py  eval_config.yaml  evaluate_design.py  metrics.py
packaging/: autoee_web.spec
reports/: eval_summary.json  eval_summary.md
safety/: approval_gates.md  dry_run_policy.md  risk_policy.yaml
scripts/: build_web_release.ps1  start_web_dev.ps1
skills/: __init__.py  closed_loop_control_check.md  component_selection_capacitor.md  component_selection_inductor.md  component_selection_power_mosfet.md  lab_debug_waveform_analysis.md  open_loop_simulation_check.md  pcb_power_layout_check.md  project_maintenance.md  report_generation.md  rough_loss_estimation.md  spec_to_architecture.md
specs/: current_spec.yaml  example_spec.yaml  spec.schema.yaml
tests/: test_foundation.py  test_model_backend.py  test_web_backend.py  test_workflow_modules.py
tools/: README.md  (+1 more)
(+82 files in other folders)
